--- a/webblog/Templates/blog/blog.html
+++ b/webblog/Templates/blog/blog.html
@@ -1,14 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
+{% load static %}
+<html >
 <head>
-    <meta charset="UTF-8">
-    <title>My webblog!</title>
+	<title>Мой блог</title>
+	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+	<link rel="stylesheet" href="{% static 'css/style.css'%}" type="text/css" media="all" />
+
+	<link rel="shortcut icon" href="css/images/favicon.ico" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    {% for post in postList%}
-        {{ post.title }}
-        {{ post.description }}
-        {{ post.author }}
-    {%endfor%}
+<div class="shell">
+	<div class="border">
+
+		<div id="navigation">
+			<ul>
+			    <li><a href="#" class="active">Главная</a></li>
+			    <li><a href="#">Админ панель</a></li>
+			    
+			</ul>
+		</div>
+
+		<div id="main">
+			<div id="content" class="left">
+				
+				<div class="projects">
+					<h3>Записи</h3>
+					{% for post in postList %}
+					<div class="item">
+						<div class="image left">
+							<a href="#"><img src="css/images/project01.jpg" alt="" /></a>
+						</div>
+						<div class="text left">
+							<h4>{{ post.title }}</h4>
+							<p>{{ post.description }}</p>
+							<p>Автор: {{ post.author }} </p>
+						</div>
+						<div class="cl">&nbsp;</div>
+					</div>
+					{% endfor %}
+				</div>
+			</div>
+			
+			<div class="cl">&nbsp;</div>
+		</div>
+		
+
+	</div>
+	
+	<div id="footer">
+		<p class="copy right">Copyright &copy;  2022 </p>
+	</div>
+</div>
 </body>
 </html>
