--- a/webblog/Templates/blog/blog.html
+++ b/webblog/Templates/blog/blog.html
@@ -31,14 +31,14 @@
 					{% for post in postList %}
 					<div class="item">
 						<div class="image left">
-							<a href="#"><img src="css/images/project01.jpg" alt="" /></a>
+							<a href="#"><img src="{{ post.image.url }}" alt="" width="200px"/></a>
 						</div>
 						<div class="text left">
 							<h4>{{ post.title }}</h4>
-							<p>{{ post.description }}</p>
+							<p width="100wv">{{ post.description }}</p>
 							<p>Автор: {{ post.author }} </p>
 						</div>
-						<div class="cl">&nbsp;</div>
+						<div class="cl"></div>
 					</div>
 					{% endfor %}
 				</div>
